Fixed home page sizing on mobile

--- a/index.css
+++ b/index.css
@@ -47,11 +47,11 @@ h1 {
   
 .big {
     animation: pulse 2s infinite alternate;
-    font-size: 2em;
+    font-size: 1.5em;
 }
   
 .small {
-    font-size: 1.25em;
+    font-size: 1em;
     color: #333;
 }
 
